--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <h1 id="title">Time to 🥁</h1>
+  <h1 id="title">🥁 Not my tempo!</h1>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
