implement pattern gameplay

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <h1 id="title">🥁 Not my tempo!</h1>
-  <div class="set">
+  <div class="drums">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
     <button class="s drum">s</button>
@@ -19,6 +19,14 @@
     <button class="j drum">j</button>
     <button class="k drum">k</button>
     <button class="l drum">l</button>
+  </div>
+
+  <div>
+    <button id="set" class="tempo">set tempo</button>
+    <button id="play" class="tempo">play tempo</button>
+
+    <p>Set a tempo by entering a pattern, and let a friend guess it by playing the tempo!</p>
+    <p>If they are successful, perhaps they may be invited to your band...</p>
   </div>
 
   <script src="index.js" charset="utf-8"></script>
