--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>Whiplash</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-  <h1 id="title">🥁 Not my tempo!</h1>
+  <h1 id="title">🥁 Not my tempo >:[</h1>
   <div class="drums">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
@@ -25,8 +26,7 @@
     <button id="set" class="tempo">set tempo</button>
     <button id="play" class="tempo">play tempo</button>
 
-    <p>Set a tempo by entering a pattern, and let a friend guess it by playing the tempo!</p>
-    <p>If they are successful, perhaps they may be invited to your band...</p>
+    <p>Set the tempo by entering a pattern, and let a friend try to decode it!</p>
   </div>
 
   <script src="index.js" charset="utf-8"></script>
